fix issue with image not showing up in phone view

--- a/src/components/SingleReview/SingleReview.css
+++ b/src/components/SingleReview/SingleReview.css
@@ -29,6 +29,7 @@
 }
 
 @media only screen and (max-width: 600px) {
+ 
 .singleReview-container {
    background-color: #393e46;
     margin: 30px;
@@ -40,16 +41,7 @@
     height: 20%;
          border-color: #00adb5; 
   }
-  .singleReview-img {
-      width: 0%;
-    height: auto;
-    align-items: center;
-    align-items: flex-end;
-    transform: rotate(-2deg);
-    transform: rotate(2deg);
-    margin: 15px;
-    padding: 0 5px;
-  }
+  
   .single-review-text{
     margin: 20px;
   }
@@ -59,100 +51,3 @@
 }
   
 
-
-   .vote-button{
-
-  background-color: #36A9AE;
-  background-image: linear-gradient(#37ADB2, #329CA0);
-  border: 1px solid #2A8387;
-  border-radius: 4px;
-  box-shadow: rgba(0, 0, 0, 0.12) 0 1px 1px;
-  color: #FFFFFF;
-  cursor: pointer;
-  display: inline-block;
-  justify-content: center;
-  font-family: -apple-system,".SFNSDisplay-Regular","Helvetica Neue",Helvetica,Arial,sans-serif;
-  font-size: 17px;
-  line-height: 100%;
-  margin: 10px;
-  outline: 0;
-  padding: 11px 15px 12px;
-  text-align: center;
-  transition: box-shadow .05s ease-in-out,opacity .05s ease-in-out;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-  width: 20%;
-}
-
-.vote-button:hover {
-  box-shadow: rgba(255, 255, 255, 0.3) 0 0 2px inset, rgba(0, 0, 0, 0.4) 0 1px 2px;
-  text-decoration: none;
-  transition-duration: .15s, .15s;
-}
-
-.vote-button:active {
-  box-shadow: rgba(0, 0, 0, 0.15) 0 2px 4px inset, rgba(0, 0, 0, 0.4) 0 1px 1px;
-}
-
-.vote-button:disabled {
-  cursor: not-allowed;
-  opacity: .6;
-}
-
-.vote-button:disabled:active {
-  pointer-events: none;
-}
-
-.vote-button:disabled:hover {
-  box-shadow: none;
-}
-
-
-/* 
-button{
-
-  background-color: #36A9AE;
-  background-image: linear-gradient(#37ADB2, #329CA0);
-  border: 1px solid #2A8387;
-  border-radius: 4px;
-  box-shadow: rgba(0, 0, 0, 0.12) 0 1px 1px;
-  color: #FFFFFF;
-  cursor: pointer;
-  display: block;
-  font-family: -apple-system,".SFNSDisplay-Regular","Helvetica Neue",Helvetica,Arial,sans-serif;
-  font-size: 17px;
-  line-height: 100%;
-  margin: 0;
-  outline: 0;
-  padding: 11px 15px 12px;
-  text-align: center;
-  transition: box-shadow .05s ease-in-out,opacity .05s ease-in-out;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-  width: 100%;
-}
-
-button:hover {
-  box-shadow: rgba(255, 255, 255, 0.3) 0 0 2px inset, rgba(0, 0, 0, 0.4) 0 1px 2px;
-  text-decoration: none;
-  transition-duration: .15s, .15s;
-}
-
-button:active {
-  box-shadow: rgba(0, 0, 0, 0.15) 0 2px 4px inset, rgba(0, 0, 0, 0.4) 0 1px 1px;
-}
-
-button:disabled {
-  cursor: not-allowed;
-  opacity: .6;
-}
-
-button:disabled:active {
-  pointer-events: none;
-}
-
-button:disabled:hover {
-  box-shadow: none;
-} */
